@@ -1,3 +1,12 @@
+2011-01-07 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-info-mode-completions-section-initialize):
+	Write implementation.
+	(epackage-info-mode-tab-command): Implement 'Section:' header
+	completion.
+	(epackage-info-mode): Call `epackage-info-mode-pcomplete-variables'.
+	(epackage-info-mode-pcomplete-list): Rewrite complete code.
+
 2011-01-06  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-info-mode-tab-standard): New.
